--- a/More Tidy Class.ipynb
+++ b/More Tidy Class.ipynb
@@ -35,7 +35,7 @@
     "class PixelMapPeriodogram:\n",
     "    \n",
     "    \n",
-    "    def __init__(self , targetpixelfile, method = 'LombScargle'):\n",
+    "    def __init__(self , targetpixelfile, **kwargs):\n",
     "        \n",
     "        #Defining an aperture that will be used in plotting and making empty 2-d arrays of the correct size for masks\n",
     "        self.aperture = targetpixelfile.pipeline_mask\n",
@@ -71,7 +71,7 @@
     "                    pg.extend([periodogram])\n",
     "                elif method == 'LombScargle':\n",
     "                    #Making a periodogram for the pixel\n",
-    "                    periodogram = lc.to_periodogram(oversample_factor=5)\n",
+    "                    periodogram = lc.to_periodogram(**kwargs)\n",
     "                    periodogram = periodogram.flatten()\n",
     "                    #Extending the list of periodogram data for each pixel\n",
     "                    pg.extend([periodogram])\n",
@@ -107,7 +107,7 @@
     "                #Plotting the target pixel periodograph -- This can also be set up to have looks based on user input if desired\n",
     "                ax[i][j].plot(self.periodogram[i][j].frequency,self.periodogram[i][j].power);\n",
     "    \n",
-    "    def frequency_heat(self,low=0,high=1):\n",
+    "    def frequency_heat(self,low=0,high=1,frequencies = ['none']):\n",
     "        heat_stamp = []\n",
     "        for i in np.arange(0,len(self.aperture)):\n",
     "            for j in np.arange(0,len(self.aperture[0])):\n",
